<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    android:background="#3d3d3d" >

    <TableLayout
        android:layout_width="match_parent"
   	 	android:layout_height="wrap_content"
        android:paddingLeft="16dp"
    	android:paddingRight="16dp" >   
    	
	    <EditText
	            android:id="@+id/user"
	            android:layout_width="fill_parent"
	           	android:layout_height="50dp"
	            android:ems="10"
	            android:hint="@string/user"
	            android:gravity="center_vertical"
	            android:paddingLeft="10sp"
	            android:layout_marginTop="22dp"
	            android:textColor="#a3a3a3"
	            android:textColorHint="#a3a3a3"
	            android:background="#333333" />
	
	        <EditText
	            android:id="@+id/pass"
	            android:layout_width="fill_parent"
	           	android:layout_height="50dp"
	            android:ems="10"
	            android:hint="@string/pass"
	            android:inputType="textPassword"
	            android:gravity="center_vertical"
	            android:paddingLeft="10sp"
	            android:layout_marginTop="18dp"
	            android:textColor="#a3a3a3"
	            android:textColorHint="#a3a3a3"
	            android:background="#333333" />
	
	        <TableRow
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="right"
	            android:layout_marginTop="18dp"
	            android:gravity="right"
	            android:orientation="vertical" >

	            <Button
	                android:layout_gravity="right"
	                android:gravity="center"
	                android:onClick="sendMessage"
	                android:text="@string/button_send"
	                android:textColor="#3d3d3d"
	                android:width="120dp"
	                android:height="45dp" />

	        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="vertical" >
				<TextView
				    android:layout_height="30dp"
				    android:layout_width="fill_parent"
				    android:layout_gravity="bottom"
				    android:gravity="center_vertical|center_horizontal"
				    android:text="@string/footer"
				    android:background="#333333"
				    android:textSize="10sp"
				    android:textColor="#5a5a5a"
				    android:textScaleX="1" />

    </TableLayout>

</LinearLayout>