<?xml version="1.0" encoding="UTF-8"?>
<ScrollView>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:orientation="vertical"
	    android:scrollbars="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true" >
		<TextView android:id="@+id/file_name"
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:textColor="#555555"
		    	android:gravity="left"
		    	android:paddingLeft="24dp"
		    	android:layout_marginTop="18dp"
		    	android:text="@string/full_name"
		    	android:textSize="17sp" />
		<TextView android:id="@+id/file_name_data"
		    	android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:textColor="#aaaaaa"
		    	android:gravity="left"
		    	android:paddingLeft="24dp"
		    	android:paddingRight="16dp"
		    	android:layout_marginTop="5dp"
		    	android:layout_marginBottom="10dp"
		    	android:textSize="15sp" />
	
		<TextView
		    android:layout_width="match_parent"
		    android:layout_height="1dp"
		    android:background="#DADADA" />
	
		<TextView android:id="@+id/file_size"
		    	android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:textColor="#555555"
		    	android:gravity="left"
		    	android:paddingLeft="24dp"
		    	android:layout_marginTop="10dp"
		    	android:text="@string/size"
		    	android:textSize="17sp" />
		<TextView android:id="@+id/file_size_data"
		    	android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:textColor="#aaaaaa"
		    	android:gravity="left"
		    	android:paddingLeft="24dp"
		    	android:layout_marginTop="5dp"
		    	android:layout_marginBottom="10dp"
		    	android:textSize="15sp" />
		<TextView          
	      android:layout_width="fill_parent" 
	      android:layout_height="0.7dp" 
	      android:background="#DADADA" />
		<TextView android:id="@+id/file_extension"
		    	android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:textColor="#555555"
		    	android:gravity="left"
		    	android:paddingLeft="24dp"
		    	android:layout_marginTop="10dp"
		    	android:text="@string/file_extension"
		    	android:textSize="17sp" />
		<TextView android:id="@+id/file_extension_data"
		    	android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:textColor="#aaaaaa"
		    	android:gravity="left"
		    	android:paddingLeft="24dp"
		    	android:layout_marginTop="5dp"
		    	android:layout_marginBottom="10dp"
		    	android:textSize="15sp" />
		<TextView          
	      android:layout_width="fill_parent" 
	      android:layout_height="0.7dp" 
	      android:background="#DADADA" />
		<TextView android:id="@+id/file_modifiedd"
		    	android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:textColor="#555555"
		    	android:gravity="left"
		    	android:paddingLeft="24dp"
		    	android:layout_marginTop="10dp"
		    	android:text="@string/modified"
		    	android:textSize="17sp" />
		<TextView android:id="@+id/file_modified_data"
		    	android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:textColor="#aaaaaa"
		    	android:gravity="left"
		    	android:paddingLeft="24dp"
		    	android:layout_marginTop="5dp"
		    	android:layout_marginBottom="10dp"
		    	android:textSize="15sp" />
		<TextView          
	      android:layout_width="fill_parent" 
	      android:layout_height="0.7dp" 
	      android:background="#DADADA" />
		<TextView android:id="@+id/file_path"
		    	android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:textColor="#555555"
		    	android:gravity="left"
		    	android:paddingLeft="24dp"
		    	android:layout_marginTop="10dp"
		    	android:text="@string/full_path"
		    	android:textSize="17sp" />
		<TextView android:id="@+id/file_path_data"
		    	android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:textColor="#aaaaaa"
		    	android:gravity="left"
		    	android:paddingLeft="24dp"
		    	android:paddingRight="16dp"
		    	android:layout_marginTop="5dp"
		    	android:layout_marginBottom="10dp"
		    	android:textSize="15sp" />
	</LinearLayout>
</ScrollView>